--- a/pages/portal/portal.wxml
+++ b/pages/portal/portal.wxml
@@ -8,7 +8,7 @@
       interval="{{interval}}"
       duration="{{duration}}"
       >
-      <block wx:for="{{imgUrls}}">
+      <block wx:for="{{imgUrls}}" wx:key="{{imgUrls.index}}">
         <swiper-item>
           <image src="{{item}}" class="slide-image" width="355" height="150" />
         </swiper-item>
@@ -16,8 +16,26 @@
     </swiper>
   </view>
 <!--大标题 text相当于span标签-->
-  <view class="bigTitle">
-    <text>我的电影榜单</text>
-    <text>必定是精品电影</text>
+  <view class="title">
+    <text class="bigTitle">我的电影榜单</text>
+    <text class="smallTitle">必定是精品电影</text>
+  </view>
+
+  <!--第一个跳转导航-->
+  <view class="navMenu">
+  <navigator url="../saleticket/saleticket?type=Showtime/LocationMovies&name=正在售票">
+    <view>
+      <text>正在售票</text>
+      <text decode="true">&gt;</text>
+    </view>
+  </navigator>
+    <view>
+      <text>正在热映</text>
+      <text decode="true">&gt;</text>
+    </view>
+    <view>
+      <text>即将上映</text>
+      <text decode="true">&gt;</text>
+    </view>
   </view>
 </view>
