--- a/pages/saleticket/saleticket.wxml
+++ b/pages/saleticket/saleticket.wxml
@@ -5,19 +5,19 @@
     </view>
     <view wx:for="{{movieList}}" wx:key="{{item.id}}" class="movielist">
     <!-- url="../item/item?id={{item.id}}"    -->
-      <navigator class="listContent">
+      <navigator class="listContent" url="../movieDetial/movieDetial?type=movie/detail&movieId={{item.movieId}}">
         <view class="poster">
           <image src="{{item.img}}"/>
         </view>
         <view class="introduce">
-          <text class='movieName'>{{item.t}}</text>
-          <text class="commonspecial">{{item.commonSpecial}}<text>({{item.year}})</text></text>
+          <text class='movieName'>{{item.titleCn}}</text>
+          <text class="commonspecial">{{item.commonSpecial}}<text>({{item.Year}})</text></text>
           <text class="director">
-            导演： {{item.dN}}
+            导演： {{item.directorName}}
           </text>
         </view>
         <view class="score">
-          <text>{{item.r}}</text>
+          <text>{{item.ratingFinal}}</text>
         </view>
       </navigator>
     </view>
